deploy/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apollo
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 80
  selector:
    app: apollo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apollo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apollo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: apollo
    spec:
      containers:
      - name: apollo
        image: registry.arielmiki.com/arielmiki/apollo:latest
        ports:
          - containerPort: 80
