deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: apollo.arielmiki.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apollo  
            port:
              number: 8000
